# yolox-sahi

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: tutorials.ipynb
src/const/: values.py
src/sahi_predictor/: yolox_sahi.py
src/yolox_model/: predictor.py
